Minor UI changs

--- a/BLAZAM/Pages/Install/ADirectory.razor
+++ b/BLAZAM/Pages/Install/ADirectory.razor
@@ -4,7 +4,7 @@
 @{
 }
     <div>
-    <DirectorySettings SettingsSaved="@(()=>{directoryStatusPanel.ResetStatus();})" />
+    <DirectorySettings ShowStatusPanel=false SettingsSaved="@(()=>{directoryStatusPanel.ResetStatus();})" />
 
         <ActiveDirectoryStatusPanel @ref=directoryStatusPanel DirectoryConnected="@(()=>{disableNext=false;})"/>
         <br/>
