--- a/BLAZAMGui/UI/Outputs/TemplateInheritanceTreeView.razor
+++ b/BLAZAMGui/UI/Outputs/TemplateInheritanceTreeView.razor
@@ -6,9 +6,11 @@
 
     <MudTreeView T="DirectoryTemplate"
                  Items="RootTemplate"
+                 AutoExpand=true
                  Dense="true"
                  Hover="true"
                  Class="py-3"
+                 SelectedValue="SelectedTemplate"
                  SelectedValueChanged=SelectedTemplateChanged
                  MaxHeight="400px">
     <ItemTemplate>
