Minor changes and fixes

--- a/BLAZAM/wwwroot/css/site.css
+++ b/BLAZAM/wwwroot/css/site.css
@@ -8,6 +8,9 @@ html, body {
 h1:focus {
     outline: none;
 }
+.d-contents{
+    display:contents !important;
+}
 .blur-background {
     backdrop-filter: blur(10px);
 }
