--- a/BLAZAMGui/UI/Search/SearchPageHeader.razor
+++ b/BLAZAMGui/UI/Search/SearchPageHeader.razor
@@ -15,8 +15,10 @@
 
         <MudHidden Breakpoint="Breakpoint.Xs" Invert=true>
             <MudStack Row="true">
-                <MudSpacer/>
-                <MudButton Color="Color.Tertiary" OnClick="@(()=>{_searchModal?.ShowAsync();})" Class="align-self-center">Search</MudButton>
+                <MudSpacer />
+                <MudButton Color="Color.Tertiary"
+                           OnClick="@(()=>{_searchModal?.ShowAsync();})"
+                           Class="align-self-center">Search</MudButton>
                 <MudSpacer />
 
             </MudStack>
