--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -528,7 +528,7 @@
 
             catch (Exception ex)
             {
-                Loggers.ActiveDirectryLogger.Warning("Error checking user h-drive: {Message}", ex);
+                Loggers.ActiveDirectoryLogger.Warning("Error checking user h-drive: {Message}", ex);
 
             }
         }
