--- a/BLAZAMGui/UI/Groups/RenameGroupModalContent.razor
+++ b/BLAZAMGui/UI/Groups/RenameGroupModalContent.razor
@@ -51,7 +51,7 @@
         }
         catch(Exception ex)
         {
-            Loggers.ActiveDirectryLogger.Error("Error attempting to rename a group {@Error}",ex);
+            Loggers.ActiveDirectoryLogger.Error("Error attempting to rename a group {@Error}",ex);
             SnackBarService.Error("The group could not be renamed.");
         }
 
