--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -54,7 +54,7 @@
                         if (job.Result != JobResult.Passed)
                         {
 
-                            Loggers.ActiveDirectryLogger.Error("Could not set password change required when setting password.");
+                            Loggers.ActiveDirectoryLogger.Error("Could not set password change required when setting password.");
 
                         }
                     }
