--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -63,8 +63,8 @@
         </MoreItemsTemplate>
     </MudAutocomplete>
 
-    @code {
-#nullable disable warnings
+@code {
+    #nullable disable warnings
     [Parameter]
     public Func<object> Validation { get; set; }
     [Parameter]
@@ -83,8 +83,15 @@
     [Parameter]
     public Origin AnchorOrigin { get; set; } = Origin.BottomCenter;
 
+    /// <summary>
+    /// Disables this autocomplete input
+    /// </summary>
     [Parameter]
     public bool Disabled { get; set; }
+
+    /// <summary>
+    /// Automatically bring the text box into focus on load
+    /// </summary>
     [Parameter]
     public bool AutoFocus { get; set; }
 
@@ -96,6 +103,7 @@
     /// </remarks>
     [Parameter]
     public int MaxResults { get; set; } = 10;
+
 
     [Parameter]
     public bool AllowCustomInput { get; set; }
@@ -115,6 +123,10 @@
 
     IEnumerable<IDirectoryEntryAdapter> _searchResults = new List<IDirectoryEntryAdapter>();
     bool _searchDisabled;
+
+    /// <summary>
+    /// Indicates whether to search for disabled Users/Computers
+    /// </summary>
     [Parameter]
     public bool SearchDisabled
     {
@@ -191,10 +203,10 @@
     }
 
 
-    public List<IDirectoryEntryAdapter> _selectedResults;
+    // public List<IDirectoryEntryAdapter> _selectedResults;
 
 
-    List<string> SelectedResultNames = new();
+    // List<string> SelectedResultNames = new();
 
 
 
