--- a/BLAZAMGui/UI/Inputs/MudSelectList.razor
+++ b/BLAZAMGui/UI/Inputs/MudSelectList.razor
@@ -29,7 +29,7 @@
                         </MudElement>
                     }
                 <MudSpacer />
-                <MudIcon Class="align-end" Icon="@(_selectMenu?.IsOpen==true?Icons.Material.Filled.ArrowDropUp:Icons.Material.Filled.ArrowDropDown)" />
+                <MudIcon Class="align-end" Icon="@(_selectMenu?.Open==true?Icons.Material.Filled.ArrowDropUp:Icons.Material.Filled.ArrowDropDown)" />
             </MudStack>
         </MudField>
     </ActivatorContent>
