--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -465,7 +465,7 @@
         </CascadingValue>
 
     </EditForm>
-    @if (User.CanEdit && User.HasUnsavedChanges && !User.NewEntry)
+    @if ((User.CanEdit || CurrentUser.State.CanAssign) && User.HasUnsavedChanges && !User.NewEntry)
     {
         <UnsavedChangesPrompt SaveChanges="SaveChanges" DiscardChanges="DiscardChanges" />
     }
